# agent-explore

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_observer.py
.claude/hooks/: check_observer.py  security_check.py
bench/: CLAUDE.md  __init__.py  runner.py  stats.py  types.py  verifier.py
configs/: CLAUDE.md
core/: CLAUDE.md  __init__.py  agent.py  llm.py  tools.py  types.py
core/providers/: __init__.py  bedrock.py  openai_compat.py
experiments/: CLAUDE.md
experiments/001_mask_vs_remove/: config.yaml  hypothesis.md  run.py  strategies.py  tasks.jsonl  tools.py
experiments/002_logit_masking/: config.yaml  demo_block_needed.py  demo_walkthrough.py  hypothesis.md  logit_mask_notes.md  run.py  strategies.py  tasks.jsonl  tools.py
experiments/003_prefix_cache/: config.yaml  hypothesis.md  run.py  strategies.py  tasks.jsonl  tools.py
experiments/004_kv_cache_stability/: __init__.py  config.yaml  hypothesis.md  run.py  run_log.txt  strategies.py
experiments/005_guided_decoding/: config.yaml  hypothesis.md  run.py
experiments/006_model_scale/: analyze.py  hypothesis.md  run_all.sh
experiments/007_content_format/: config.yaml  experiment.md  hypothesis.md  prepare_tasks.py  run.py  strategies.py
infra/: README.md  restart_vllm.sh  setup_vllm_instance.sh  userdata.sh
observer/: README.md  __init__.py  client.py  server.py
paper/: logit-mask-experiment.md  manus-context-prompt.md
research/: agent_interaction_modalities.md
tools/: CLAUDE.md  __init__.py  calculator.py  chat_ui.html  fetch_page.py  msa_chat.py  web_search.py
(+340 files in other folders)
